--- a/ninja-ide-git/PKGBUILD
+++ b/ninja-ide-git/PKGBUILD
@@ -1,17 +1,20 @@
-# Submitted: Federico Cinelli <cinelli.federico@gmail.com>
+# Submitted:  Federico Cinelli <cinelli.federico@gmail.com>
 # Maintainer: Federico Cinelli <cinelli.federico@gmail.com>
 
 pkgname=ninja-ide-git
-pkgver=121107
+pkgver=20130206
 pkgrel=1
 pkgdesc="Ninja Is Not Just Another Intergrated Development Environment - Latest git pull"
 arch=('any')
 url="http://ninja-ide.org"
 license=('GPL')
-depends=('python2' 'python2-distribute' 'python2-pyqt' 'git' 'pyinotify')
-provides=('ninja-ide')
+depends=('python2' 'python2-distribute' 'python2-pyqt' 'git' 'python2-pyinotify')
+install=$pkgname.install
+provides=('ninja-ide-git')
 conflicts=('ninja-ide')
 replaces=('ninja-ide')
+source=(ninja-ide-git.desktop)
+md5sums=('384b13743f204b17ed3b87cc7d8df456')
 
 _gitroot="git://github.com/ninja-ide/ninja-ide.git"
 _gitname="ninja-ide"
@@ -36,6 +39,10 @@ build() {
 
 package() {
   cd "$srcdir/$_gitname-build"
+
+  install -Dm644 "$srcdir/$pkgname.desktop" "$pkgdir/usr/share/applications/$pkgname.desktop"
+  install -Dm644 "ninja_ide/img/icon.png" "$pkgdir/usr/share/pixmaps/$pkgname.png"
+
   sed -i 's|#!/usr/bin/env python|#!/usr/bin/env python2|' ninja-ide.py
   python2 setup.py install --root=$pkgdir/ --optimize=1
 }
