--- a/6200ch/PKGBUILD
+++ b/6200ch/PKGBUILD
@@ -14,15 +14,16 @@ url=('http://svn.mythtv.org/trac/browser/trunk/mythtv/contrib/channel_changers/6
 provides=("6200ch")
 
 build() {
-  cd $srcdir
+  cd "$srcdir"
 
   wget http://svn.mythtv.org/trac/export/22974/trunk/mythtv/contrib/channel_changers/6200ch/6200ch.c
   wget http://svn.mythtv.org/trac/export/22974/trunk/mythtv/contrib/channel_changers/6200ch/Makefile
   wget http://svn.mythtv.org/trac/export/22974/trunk/mythtv/contrib/channel_changers/6200ch/README
   
   make
-  
-  mkdir -vp $pkgdir/usr/bin
-  cp -v 6200ch $pkgdir/usr/bin/6200ch
-  chmod +x $pkgdir/usr/bin/6200ch
+}
+package() {
+  mkdir -vp "$pkgdir/usr/bin"
+  cp -rv 6200ch "$pkgdir/usr/bin/6200ch"
+  chmod +x "$pkgdir/usr/bin/6200ch"
 }
