--- a/4pane-svn/PKGBUILD
+++ b/4pane-svn/PKGBUILD
@@ -22,31 +22,31 @@ _svnmod="fourpane"
 
 build() {
   msg "Starting SVN checkout..."
-  cd ${srcdir}
-  if [ -d $_svnmod/.svn ]; then
-    (cd $_svnmod && svn up -r $pkgver)
+  cd "$srcdir"
+  if [ -d "$_svnmod/.svn" ]; then
+    (cd "$_svnmod" && svn up -r "$pkgver")
   else
-    svn co $_svntrunk --config-dir ./ -r $pkgver $_svnmod
+    svn co "$_svntrunk" --config-dir ./ -r "$pkgver" "$_svnmod"
   fi
   msg "SVN checkout done or server timeout"
   msg "Starting make..."
 
-  if [ -d ${srcdir}/$_svnmod-build ]; then
-    rm -rf $_svnmod-build
+  if [ -d "$srcdir/$_svnmod-build" ]; then
+    rm -rf "$_svnmod-build"
   fi
 
-  cp -r $_svnmod $_svnmod-build
-  cd $_svnmod-build/trunk
+  cp -r "$_svnmod" "$_svnmod-build"
+  cd "$_svnmod-build/trunk"
 
   ./configure --prefix=/usr --disable-desktop --disable-symlink
   make
 }
 
 package() {
-  cd $srcdir/$_svnmod-build/trunk
+  cd "$srcdir/$_svnmod-build/trunk"
   make DESTDIR="$pkgdir" install
 
-  install -d -m755 "$pkgdir"/usr/share/{applications,pixmaps}
-  install -D -m644 "$srcdir"/4Pane.desktop "$pkgdir"/usr/share/applications/
-  ln -s $srcdir/$_svnmod-build/trunk/bitmaps/4PaneIcon48.png "$pkgdir"/usr/share/pixmaps/4Pane.png
+  install -d -m755 "$pkgdir/usr/share/{applications,pixmaps}"
+  install -D -m644 "$srcdir/4Pane.desktop" "$pkgdir/usr/share/applications/"
+  ln -s "$srcdir/$_svnmod-build/trunk/bitmaps/4PaneIcon48.png" "$pkgdir/usr/share/pixmaps/4Pane.png"
 }
